public source code update to SRU2016_7.8.9