@@ -15,8 +15,11 @@
 package com.prowidesoftware.swift.model;
 
 import java.io.Serializable;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Stack;
 
+import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.Validate;
 
 /**
@@ -83,7 +86,7 @@ public class SwiftBlock4 extends SwiftTagListBlock implements Serializable {
 	 * @return Integer containing the block's number
 	 */
 	public Integer getNumber() {
-		return new Integer(4);
+		return Integer.valueOf(4);
 	}
 
 	/**
@@ -96,4 +99,51 @@ public class SwiftBlock4 extends SwiftTagListBlock implements Serializable {
 		return("4");
 	}
 
+	/**
+	 * Creates a new block with all empty sequences removed.
+	 * <br />
+	 * <p>The implementation uses as sequence boundaries the fields: 16R, 16S and 15a.
+	 * Two consecutive 16R (start of sequence) and 16S (end of sequence) with the same qualifier 
+	 * are considered an empty sequence so both boundary fields 16R and 16S will be dropped. 
+	 * For field 15a (start of sequence) there is no end of sequence boundary so if two consecutive
+	 * 15a are found, the first one will be dropped. Also a 15a at the end of the block will be 
+	 * considered and empty sequence.</p>
+	 *
+	 * @param sequence a block with sequences to filter
+	 * @return a new block containing all tags that are outside a empty 16R/S or 15a sub-block, or <code>null</code> if the parameter block is null
+	 * @since 7.8.8
+	 */
+	public static SwiftBlock4 removeEmptySequences(final SwiftBlock4 b4) {
+		if (b4 == null) {
+			return null;
+		}
+		final Stack<Tag> stack = new Stack<Tag>();
+		for (Tag t : b4.getTags()) {
+			if (!stack.isEmpty() &&
+				StringUtils.equals(t.getName(), "16S") &&
+				StringUtils.equals(stack.peek().getName(), "16R") && 
+				StringUtils.equals(stack.peek().getValue(), t.getValue())) {
+				/*
+				 * found an empty 16R 16S pair
+				 */
+				stack.pop();
+			} else if (t.isNumber(15) && stack.peek().isNumber(15)) {
+				/*
+				 * found two consecutive 15a
+				 */
+				stack.pop(); //remove the previous seq start
+				stack.push(t); //keep this new sequence for the moment
+			} else {
+				stack.push(t);
+			}
+		}
+		if (!stack.isEmpty() && stack.peek().isNumber(15)) {
+			/*
+			 * if last field is 15a remove it because it is starting
+			 * a sequence with no tags.
+			 */
+			stack.pop();
+		}
+        return new SwiftBlock4(new ArrayList<Tag>(stack));
+	}
 }
